--- a/src/management-ui/component/Event.html
+++ b/src/management-ui/component/Event.html
@@ -18,7 +18,7 @@
             <td class="key-value-list__value key-value-list__auto--auto lpg-date">
                 {#if event.id}
                 <input type="hidden" id="event_id_{i}" name="id" value="{ event.id } "> {/if}
-                <input class="form-control form-control-2-3" id="event_date_{i}" name="event_date" type="date" value="{ (event.date? datetime.HTMLFormatDate(event.date) : '') }">
+                <input class="form-control form-control-2-3" id="event_date_{i}" name="event_date" type="date" value="{ (event.date? $datetime.HTMLFormatDate(event.date) : '') }">
             </td>
             <td class="key-value-list__value key-value-list__auto--auto lpg-location">
                 <input class="form-control form-control-2-3" id="event_location_{i}" name="event_location" type="text" value="{ event.location || '' }">
@@ -39,6 +39,3 @@
     </tbody>
     {/each}
 </table>
-<p>
-
-</p>
