--- a/src/management-ui/component/Page.html
+++ b/src/management-ui/component/Page.html
@@ -18,3 +18,18 @@
     </Layout>
 </body>
 </html>
+
+<script>
+	import Layout from './Layout.html'
+
+	export default {
+		data() {
+			return {
+			}
+		},
+
+		components: {
+            Layout
+		}
+	}
+</script>
