admin - Fix compile errors

--- a/src/management-ui/component/Page.html
+++ b/src/management-ui/component/Page.html
@@ -21,6 +21,7 @@
 
 <script>
 	import Layout from './Layout.html'
+	import Header from './Header.html'
 
 	export default {
 		data() {
@@ -29,6 +30,7 @@
 		},
 
 		components: {
+		    Header,
             Layout
 		}
 	}
