--- a/src/ui/component/disciteParts/DisciteModuleActions.html
+++ b/src/ui/component/disciteParts/DisciteModuleActions.html
@@ -4,6 +4,6 @@
             Download document
         </a> ({fileHelpers.extension(module.url)} {fileHelpers.appropriateFileSize(module.fileSize)})
     {:else}
-        <a href="/courses/{{course.id}}/{{module.id}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
+        <a href="/courses/{course.id}/{module.id}">{ $i18n('action_' + (module.state || 'NOT_STARTED' )) } <span class="visuallyhidden"> this module</span></a>
     {/if}
 </div>
