Fix video rendering.

--- a/src/ui/component/disciteParts/DisciteModuleActions.html
+++ b/src/ui/component/disciteParts/DisciteModuleActions.html
@@ -1,9 +1,9 @@
 <div class="discite__action discite__action--module">
-    {#if module.type === 'elearning'}
-        <a href="{module.url}">{ $i18n('action_' + (module.state || 'NOT_STARTED' )) } <span class="visuallyhidden"> this module</span></a>
-    {:elseif module.type === 'file'}
+    {#if module.type === 'file'}
         <a download="{$fileHelpers.fileName(module.url)}" href="{module.url}">
             Download document
         </a> ({$fileHelpers.extension(module.url)} {$fileHelpers.appropriateFileSize(module.fileSize)})
+    {:else}
+        <a href="/courses/{{course.id}}/{{module.id}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
     {/if}
 </div>
