--- a/src/management-ui/component/Page.html
+++ b/src/management-ui/component/Page.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
+<h1 class="heading-large">{_csrf}</h1>
     <Header />
     <Layout>
         <slot></slot>
