--- a/src/ui/component/AccessibilityOptions.html
+++ b/src/ui/component/AccessibilityOptions.html
@@ -1,4 +1,4 @@
-<fieldset class="{class}">
+<fieldset class="push-bottom">
     <legend>
         <h4 class="heading-small">Accessibility requirement</h4>
     </legend>
@@ -43,3 +43,14 @@
         <label for="accessibility-req-7">Other</label>
     </div>
 </fieldset>
+
+<script>
+
+	export default {
+		data() {
+			return {
+			    accessibilityReqs: []
+			}
+		},
+	}
+</script>
