--- a/src/management-ui/component/Event.html
+++ b/src/management-ui/component/Event.html
@@ -5,7 +5,7 @@
 <table class="key-value-list key-value-list--auto u-space-b30 table--top">
     <thead>
         <tr>
-            <th>Date</th>
+            <th>Date, Start Time</th>
             <th>Location</th>
             <th>
                 <span class="visuallyhidden">Action</span>
@@ -17,8 +17,9 @@
         <tr>
             <td class="key-value-list__value key-value-list__auto--auto lpg-date">
                 {#if event.id}
-                <input type="hidden" id="event_id_{i}" name="id" value="{ event.id } "> {/if}
-                <input class="form-control form-control-2-3" id="event_date_{i}" name="event_date" type="date" value="{ (event.date? $datetime.HTMLFormatDate(event.date) : '') }">
+                    <input type="hidden" id="event_id_{i}" name="id" value="{ event.id } ">
+                {/if}
+                <input class="form-control input--datetime" id="event_date_{i}" name="event_date" type="datetime-local" value="{ (event.date? $datetime.HTMLFormatDate(event.date) : '') }">
             </td>
             <td class="key-value-list__value key-value-list__auto--auto lpg-location">
                 <input class="form-control form-control-2-3" id="event_location_{i}" name="event_location" type="text" value="{ event.location || '' }">
