--- a/src/ui/assets/styles/components/_tables.scss
+++ b/src/ui/assets/styles/components/_tables.scss
@@ -3,11 +3,13 @@
 	margin: 30px 0;
 
 	@include e(row) {
+		position: relative;
 		border-bottom: 1px solid $grey-2;
 		margin-bottom: 15px;
 		padding-bottom: 15px;
 
 		@include media(desktop) {
+			position: relative;
 			display: table-row;
 		}
 	}
@@ -23,18 +25,27 @@
 	}
 
 	@include e(cell) {
+		position: relative;
+		margin-bottom: 20px;
+
+		@include m(action) {
+			margin-bottom: 0;
+		}
+
 		@include media(desktop) {
 			display: table-cell;
-			padding: 10px 40px 10px 0;
+			padding: 20px 40px 15px 0;
 			border-bottom: 1px solid $grey-2;
+			margin-bottom: 0;
 
 			&:last-of-type {
 				padding-right: 0;
 			}
-		}
 
-		@include m(action) {
-			margin-top: 10px;
+			@include m(action) {
+				min-height: 40px;
+				min-width: 160px;
+			}
 		}
 	}
 }
@@ -97,7 +108,6 @@
 	}
 }
 
-
 .table--top {
 	td,
 	th {
@@ -110,11 +120,9 @@
 }
 
 .table-simple {
-
 	th {
 		font-weight: bold;
 	}
-
 }
 
 .table--fix-first {
