--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -73,3 +73,15 @@ hr.clear {
 	}
 }
 
+.button {
+	@include m(link) {
+		@extend %p;
+		@extend .link;
+		font-size: inherit;
+		border: none;
+		background: none;
+		&:hover {
+			cursor: pointer;
+		}
+	}
+}
