--- a/src/ui/component/disciteParts/DisciteCourseMain.html
+++ b/src/ui/component/disciteParts/DisciteCourseMain.html
@@ -1,4 +1,4 @@
-<div class="discite__main {modifier ? 'discite__main--${modifier}' : '' }">
+<div class="discite__main {modifier ? `discite__main--${modifier}` : '' }">
 	<a class="lpg-course-link" href="/courses/{course.id}">
 		<h3 class="heading discite__heading lpg-course-name">{course.title}</h3>
 	</a>
