--- a/src/management-ui/component/Checkboxes.html
+++ b/src/management-ui/component/Checkboxes.html
@@ -1,7 +1,8 @@
 <fieldset class="u-space-b30">
     {#each options as option}
     <div class="multiple-choice">
-        <input id="{option[0]}" type="checkbox" name="{node}" value="{option[0]}" checked="{ values.indexOf(option[0]) >=0 ? 'checked' : '' }">
+
+        <input id="{option[0]}" type="checkbox" name="{node}" value="{option[0]}" checked="{ value.indexOf(option[1]) >=0 ? 'checked' : '' }">
         <label for="{option[0]}">{option[1]}</label>
     </div>
     {/each}
