LPFG-426 download/new tab conditionals, is/are plurals, minor styling

--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -55,9 +55,10 @@ $module: 'discite';
 		@include media(desktop) {
 			width: calc(100% - 300px);
 		}
-
 		@include m(search) {
-			padding-right: 100px;
+			@include media(desktop) {
+				width: calc(100% - 100px);
+			}
 		}
 	}
 
