--- a/src/ui/component/disciteParts/DisciteCourseActions.html
+++ b/src/ui/component/disciteParts/DisciteCourseActions.html
@@ -4,16 +4,19 @@
                 <a href="/book/{course.id}/{course.record.modules[0].moduleId}/{course.record.modules[0].eventId}/cancel">Cancel</a>
             {:else}
                 {#if course.getType() !== 'face-to-face'}
-                    {#if course.record.modules.length && (course.record.state !== 'ARCHIVED')}
-                        <a href="/courses/{course.id}#modules">{ $i18n('action_' + (course.record.state || 'NOT_STARTED' )) }
 
+                    {#if course.record.modules.length && (course.record.state !== 'ARCHIVED')}
+                        {#if course.getType() === 'link'}
+                        <a target="_blank" href="/courses/{course.id}">{ $i18n('action_' + (course.record.state || 'NOT_STARTED' ))}
                             <span class="visuallyhidden"> this course</span>
                         </a>
-                    {:else}
-                        <a href="/courses/{course.id}#modules">{ $i18n('action_NOT_STARTED') }
+                        {:else}
+                        <a href="/courses/{course.id}#modules">{ $i18n('action_' + (course.record.state || 'NOT_STARTED' )) }
                             <span class="visuallyhidden"> this course</span>
                         </a>
+                        {/if}
                     {/if}
+
                 {:else}
                     <a class="lpg-book-course" href="/book/{course.id}/{course.modules[0].id}/choose-date">Book
                         <span class="visuallyhidden"> this module</span>
