--- a/src/ui/component/disciteParts/DisciteModuleActions.html
+++ b/src/ui/component/disciteParts/DisciteModuleActions.html
@@ -1,9 +1,12 @@
 <div class="discite__action discite__action--module">
     {#if module.type === 'file'}
-        <a href="/courses/{course.id}/{module.id}">
+        <a download href="/courses/{course.id}/{module.id}">
             Download document
         </a> ({$fileHelpers.extension(module.url)} {$fileHelpers.appropriateFileSize(module.fileSize)})
+
     {:else}
-        <a href="/courses/{course.id}/{module.id}">{ $i18n('action_' + (module.state || 'NOT_STARTED' )) } <span class="visuallyhidden"> this module</span></a>
+        <a target="{module.type === 'link' ? '_blank' : '_self'}" href="/courses/{course.id}/{module.id}">
+            { $i18n('action_' + (module.state || 'NOT_STARTED' )) } <span class="visuallyhidden"> this module</span>
+        </a>
     {/if}
 </div>
