LPFG-426 adjust test flow. use returned attributes (+8 squashed commits) Squashed commits: [00f473f] wip [aed3a7b] wip [9db2a75] module tests done [81a9d45] more logic [aaf6bb9] rename and functionality [2d08065] tests [4bf291d] call to action modules outline [b21848a] cherry-pick lpfg-426

--- a/src/ui/component/DisciteModule.html
+++ b/src/ui/component/DisciteModule.html
@@ -1,12 +1,13 @@
 <div class="discite__item u-clearfix discite__item--module">
     <slot name="main">
-	    <DisciteModuleMain {course} {module} />
+	    <DisciteModuleMain {cta} {course} {module} {cta} {modifier}/>
     </slot>
 	<slot name="properties">
-	    <DisciteModuleProperties {course} {modifier} {module} />
+	    <DisciteModuleProperties {cta} {course} {modifier} {module} />
     </slot>
 	<slot name="actions">
-        <DisciteModuleActions {course} {module} />
+        <DisciteModuleActions cta={$constructModuleCta(course.id, module, $req.user)} {course} {module} />
+
     </slot>
 </div>
 <script>
