LPFG-302, LPFG-426, chore/call-to-actions fix imports (+5 squashed commits) Squashed commits: [b6496d2] moving courseCallToAction and linting [b03a433] fix tests [ab8f825] more logic [12022f3] LPFG-426 adjust test flow. use returned attributes (+8 squashed commits) Squashed commits: [00f473f] wip [aed3a7b] wip [9db2a75] module tests done [81a9d45] more logic [aaf6bb9] rename and functionality [2d08065] tests [4bf291d] call to action modules outline [b21848a] cherry-pick lpfg-426 [c5b410e] delete old (+12 squashed commits) Squashed commits: [8ea64ea] linting [0a8c385] linting [68f79ee] cleaning up tests [88dd894] tests [3b1104e] more tests [bf97c7b] LPFG-more tests [cae807f] testing [38004d9] skip link [5904799] actions to record [5a9afaa] clean up [7b19c3f] LPFG-wip [e88e06a] wip

--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -4,7 +4,7 @@
     </slot>
 
     <slot name="properties">
-        <DisciteCourseProperties course={course} {modifier} {module}  />
+        <DisciteCourseProperties course={course} {successId} {modifier} {module}  />
     </slot>
 
     {#if course.modules.length > 1 }
@@ -30,7 +30,7 @@
     </div>
 
     <slot name="actions">
-        <DisciteCourseActions {course} {modifier} {module} today={modifier === 'home' ? new Date() : null} />
+        <DisciteCourseActions cta={$constructCourseCallToAction(course, $req.user, modifier)} {course} {modifier} {module} today={modifier === home ? new Date() : null} />
     </slot>
 
 
