--- a/src/ui/assets/styles/components/_badge.scss
+++ b/src/ui/assets/styles/components/_badge.scss
@@ -39,6 +39,10 @@
 		color: #fff;
 	}
 
+	@include m(success) {
+		background-color: $turquoise;
+	}
+
 	@include m(smaller) {
 		font-size: 80%;
 		padding: 3px 5px 2px;
@@ -46,7 +50,7 @@
 
 	// In related__status items badges float right
 	.related {
-		@include e(status) & {
+		@include e(status) {
 			float: right;
 			margin-bottom: 10px;
 			margin-left: 10px;
