Mark modules as optional and modify course completion prompt

--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -13,6 +13,7 @@ $footer-border-top: #a1acb2;
 $footer-link: #454a4c;
 $footer-link-hover: #171819;
 $footer-text: $footer-link;
+$optional-text : $footer-text;
 
 $grey: #aaa;
 $white: #fff;
