--- a/src/management-ui/component/Radios.html
+++ b/src/management-ui/component/Radios.html
@@ -1,7 +1,7 @@
 <fieldset class="u-space-b30">
     {#each options as option}
     <div class="multiple-choice">
-        <input id="{option[0]}" type="radio" name="{node}" value="{option[0]}" checked="{ values.indexOf(option[0]) >=0 ? 'checked' : '' }">
+        <input id="{option[0]}" type="radio" name="{node}" value="{option[0]}" checked="{ (values.length  && values.indexOf(option[0]) >=0) || values+'' == option[0].toLowerCase()  ? 'checked' : '' }">
         <label for="{option[0]}">{option[1]}</label>
     </div>
     {/each}
