--- a/src/ui/assets/styles/components/_booking.scss
+++ b/src/ui/assets/styles/components/_booking.scss
@@ -1,4 +1,16 @@
 .booking {
+
+	@include e(list) {
+		@include m(cancel) {
+			list-style-type: disc;
+			margin-left:20px;
+		}
+	}
+
+	@include e(details) {
+		margin-top:20px;
+	}
+
 	@include e(col-heading) {
 		padding: 10px 0;
 		border-top: 5px solid #000;
