--- a/src/management-ui/component/Event.html
+++ b/src/management-ui/component/Event.html
@@ -17,7 +17,7 @@
     <tbody>
         <tr>
             <td class="key-value-list__value key-value-list__auto--auto lpg-date">
-                {#if event.id}<input type="hidden" id="event_id_{i}" name="event_id" value="{ event.id }">{/if}
+                <input type="hidden" id="event_id_{i}" name="event_id" value="{ event.id || 'new' }">
                 <input class="form-control input--datetime" id="event_date_{i}" name="event_date" type="datetime-local" value="{$datetime.HTMLFormatDate(event.date, true)}">
             </td>
             <td class="key-value-list__value key-value-list__auto--auto lpg-location">
@@ -25,9 +25,6 @@
             </td>
             <td class="key-value-list__value key-value-list__auto--auto">
                 <input class="form-control form-control-2-3" id="event_capacity_{i}" name="event_capacity" type="number" value="{ event.capacity || '' }">
-            </td>
-            <td>
-               {event.id}
             </td>
             <td class="key-value-list__item-action">
                 {#if i !== 0 }
