--- a/src/ui/assets/styles/components/_booking.scss
+++ b/src/ui/assets/styles/components/_booking.scss
@@ -1,14 +1,17 @@
 .booking {
+	@include e(notice) {
+		margin-top: 20px;
+	}
 
 	@include e(list) {
 		@include m(cancel) {
 			list-style-type: disc;
-			margin-left:20px;
+			margin-left: 20px;
 		}
 	}
 
 	@include e(details) {
-		margin-top:20px;
+		margin-top: 20px;
 	}
 
 	@include e(col-heading) {
@@ -64,6 +67,7 @@
 			right: 15px;
 		}
 	}
+
 	@include e(table) {
 		th {
 			border: none;
@@ -78,6 +82,12 @@
 			padding-bottom: 0;
 			border: none;
 		}
+	}
+}
+
+.cancel {
+	fieldset {
+		margin-bottom: 10px !important;
 	}
 }
 
