--- a/src/ui/assets/styles/common/_typography.scss
+++ b/src/ui/assets/styles/common/_typography.scss
@@ -37,6 +37,10 @@
 		margin-top: 0;
 	}
 
+	@include m(red) {
+		border-top: 4px solid $civil-service;
+	}
+
 	@include m(red-top) {
 		padding-top: 10px;
 		border-top: 4px solid $civil-service;
