LPFG-463 cleaning up and renaming styles, face to face overview page

--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -2,6 +2,10 @@
 * Variables
 */
 
+$space: 5px;
+$space-class-values: (5, 10, 15, 30, 45);
+
+
 /* Global footer */
 $proposition-border: #2e3133;
 // Based on GOV.UK brand blue but slightly lighter so it hits contrast on the
