--- a/src/ui/assets/styles/components/_govuk-related-items.scss
+++ b/src/ui/assets/styles/components/_govuk-related-items.scss
@@ -1,34 +1,69 @@
 .govuk-related-items {
-	margin-top: $gutter;
-	border-top: 10px solid $govuk-blue;
-	padding-top: 5px;
+  margin-top: $gutter;
+  border-top: 10px solid $govuk-blue;
+  padding-top: 5px;
 
-	.heading-medium {
-		margin-top: 0.3em;
-		margin-bottom: 0.5em;
-	}
+  .heading-medium {
+    margin-top: 0.3em;
+    margin-bottom: 0.5em;
+  }
 
-	li {
-		margin-bottom: 10px;
-		list-style-type: none;
-	}
+  li {
+    margin-bottom: 10px;
+    list-style-type: none;
+  }
 
-	@include m(flush) {
-		margin-top: 8px;
-	}
+  @include m(flush) {
+    margin-top: 8px;
+  }
 
-	@include m(keylined) {
-		// For LPG
-		border: 1px solid $grey-2;
-		border-top: 10px solid $civil-service;
-		padding-left: 8px;
-		padding-right: 8px;
+  @include m(keylined) {
+    // For LPG
+    border: 1px solid $grey-2;
+    border-top: 10px solid $civil-service;
+    padding-left: 8px;
+    padding-right: 8px;
 
-		@include m(search) {
-			border: 5px solid $grey-2;
-			padding:0px;
-			padding-left: 0px;
-			padding-right: 0px;
-		}
-	}
+    @include m(search) {
+      border: 5px solid $grey-2;
+      padding:0px;
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+  }
+}
+
+.lpg-related-items {
+  margin-top: $gutter;
+  border: 1px solid $grey-2;
+  border-top: 10px solid $civil-service;
+  padding-top: 5px;
+  padding-left: 8px;
+  padding-right: 8px;
+
+  @include m(search) {
+    border: 5px solid $grey-2;
+    padding: 0;
+  }
+
+  @include e(heading) {
+    margin-top: 0.3em;
+    margin-bottom: 0.5em;
+  }
+
+  @include m(course-overview) {
+    background-color: $light-grey;
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 0;
+    border: 1px solid $grey-2;
+    border-bottom: none;
+    border-top: 10px solid $civil-service;
+  }
+  @include e(th) {
+    padding-left: 8px;
+  }
+  @include e(td) {
+    padding-right: 8px;
+  }
 }
