--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -1,11 +1,10 @@
 <aside role="complementary">
     <form autocomplete="nope" name="searchLearning" method="get" action="/search">
         <input type="hidden" id="q" name="q" value="{ query }" />
-
-        <div class="govuk-related-items govuk-related-items--flush form-group  govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
+        <div class="lpg-related-items form-group govuk-related-items--search leftSearchBox">
             <fieldset>
                 <legend>
-                    <h2 class="heading-medium">Learning type</h2>
+                    <h2 class="govuk-related-items__heading heading-medium">Learning type</h2>
                 </legend>
                 {#each Object.entries($i18n('courseTypes')) as filter}
                     <div class="multiple-choice">
@@ -16,11 +15,11 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group  govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
+        <div class="lpg-related-items govuk-related-items--flush form-group  govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
             <fieldset>
 
                 <legend>
-                    <h3 class="heading-medium">Cost</h3>
+                    <h3 class="govuk-related-items__heading heading-medium">Cost</h3>
                 </legend>
 
                 <div class="multiple-choice">
@@ -30,10 +29,10 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
+        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
             <fieldset>
                 <legend>
-                    <h2 class="heading-medium">Your department</h2>
+                    <h2 class="govuk-related-items__heading heading-medium">Your department</h2>
                 </legend>
                 {#each departments.yours as filter}
                 <div class="multiple-choice">
@@ -44,10 +43,10 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle filter-toggle--shut">
+        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle filter-toggle--shut">
             <fieldset>
                 <legend>
-                    <h2 class="heading-medium">Other departments</h2>
+                    <h2 class="govuk-related-items__heading heading-medium">Other departments</h2>
                 </legend>
                 {#each departments.other as filter}
                 <div class="multiple-choice">
@@ -58,10 +57,10 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
+        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
             <fieldset>
                 <legend>
-                    <h2 class="heading-medium">Your areas of work</h2>
+                    <h2 class="govuk-related-items__heading heading-medium">Your areas of work</h2>
                 </legend>
                 {#each areasOfWork.yours as filter}
                 <div class="multiple-choice">
@@ -72,10 +71,10 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle filter-toggle--shut">
+        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle filter-toggle--shut">
             <fieldset>
                 <legend>
-                    <h2 class="heading-medium">Other areas of work</h2>
+                    <h2 class="govuk-related-items__heading heading-medium">Other areas of work</h2>
                 </legend>
                 {#each areasOfWork.other as filter}
                 <div class="multiple-choice">
@@ -86,10 +85,10 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
+        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox">
             <fieldset>
                 <legend>
-                    <h2 class="heading-medium">Your interests</h2>
+                    <h2 class="govuk-related-items__heading heading-medium">Your interests</h2>
                 </legend>
                 {#each interests.yours as filter}
                 <div class="multiple-choice">
@@ -100,10 +99,10 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle filter-toggle--shut">
+        <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle filter-toggle--shut">
             <fieldset>
                 <legend>
-                    <h2 class="heading-medium">Other interests</h2>
+                    <h2 class="govuk-related-items__heading heading-medium">Other interests</h2>
                 </legend>
                 {#each interests.other as filter}
                 <div class="multiple-choice">
